# nmtool

./: .gitignore  pyproject.toml
.github/workflows/: python-package.yml
src/nmtool/: __init__.py  __main__.py  nmcli.py  run_cmd.py
tests/: test_nmcli.py  test_run_cmd.py
